Fix last problems, added only one test for BookService, Swagger and Docker added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,12 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/online_bookstore?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Europe/Moscow
+spring.datasource.url=jdbc:postgresql://localhost:5432/online_bookstore
+#For building image in docker
+#spring.datasource.url=jdbc:postgresql://db:5432/online_bookstore
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
 
 jwt.token.secret=jwtbookstoreapp
 jwt.token.expired=3600000
